--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -26,5 +26,29 @@ spec:
       containers:
       - name: mysql
         image: ravidaws/mysql:v1.0
-        
+        readinessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 10
+          periodSeconds: 5
+        livenessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 10
+          periodSeconds: 5
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql  #service name cluster ip 
+  namespace: expense
+spec:
+  selector:
+    component: mysql
+    project: expense
+    tier: db
+  ports:
+  - protocol: TCP
+    port: 3306 #service-port
+    targetPort: 3306 #target-port
