--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -3,11 +3,10 @@ kind: ConfigMap
 metadata:
   name: backend
   namespace: expense
-data: #for backend we need db server host
-  DB_HOST: mysql # mysql component service name, now we need to refer this configmap in pod
+data:
+  DB_HOST: mysql # mysql component service name
   #DB_HOST: db-dev.csvdaws78s.online
-
-----
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -33,12 +32,37 @@ spec:
         project: expense
         tier: app
     spec:
+      initContainers:
+      - name: init-myservice
+        image: busybox:1.28
+        command: ['sh', '-c', "until nslookup db-dev.csvdaws78s.online; do echo waiting for myservice; sleep 2; done"]
       containers:
       - name: backend
         image: ravidaws/backend:v1.0
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "150m"
+            memory: "256Mi"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          failureThreshold: 2
+          periodSeconds: 5
+          initialDelaySeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          failureThreshold: 2
+          periodSeconds: 5
+          initialDelaySeconds: 30
         envFrom:
-        - configMapRef:  # refering from configmap top
-          name: backend
+        - configMapRef:
+            name: backend
 
 
 ---
