--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -4,8 +4,8 @@ metadata:
   name: backend
   namespace: expense
 data:
-  DB_HOST: mysql # mysql component service name
-  #DB_HOST: db-dev.csvdaws78s.online
+  #DB_HOST: mysql # mysql component service name
+  DB_HOST: db-dev.csvdaws78s.online
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -32,9 +32,34 @@ spec:
         project: expense
         tier: app
     spec:
+      initContainers: #to check the DB connection,if its success,then only we wil start BE container
+      - name: init-myservice
+        image: busybox:1.28
+        command: ['sh', '-c', "until nslookup db-dev.daws78s.online; do echo waiting for myservice; sleep 2; done"] #wait for mysql connection
       containers:
       - name: backend
-        image: ravidaws/backend:v1.0        
+        image: joindevops/backend:v1.0
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "150m"
+            memory: "256Mi"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          failureThreshold: 2
+          periodSeconds: 5
+          initialDelaySeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          failureThreshold: 2
+          periodSeconds: 5
+          initialDelaySeconds: 30
         envFrom:
         - configMapRef:
             name: backend
