--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -38,7 +38,7 @@ spec:
         command: ['sh', '-c', "until nslookup db-dev.daws78s.online; do echo waiting for myservice; sleep 2; done"] #wait for mysql connection
       containers:
       - name: backend
-        image: joindevops/backend:v1.0
+        image: ravidaws/backend:v1.0
         resources:
           requests:
             cpu: "100m"
@@ -52,7 +52,7 @@ spec:
             port: 8080
           failureThreshold: 2 #
           periodSeconds: 5
-          initialDelaySeconds: 30 #it sho
+          initialDelaySeconds: 30 #app/container wil not get ready till 30 sec
         readinessProbe:
           httpGet:
             path: /health
@@ -80,3 +80,5 @@ spec:
   - protocol: TCP
     port: 8080 #service-port
     targetPort: 8080 #target-port
+
+---
