--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -145,7 +145,7 @@ metadata:
   name: frontend
   namespace: expense
 spec:
-  type: LoadBalancer
+  #type: LoadBalancer
   selector:
     component: frontend
     project: expense
@@ -154,3 +154,16 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 8080 #target-port
+
+---
+#target binding group
+apiVersion: elbv2.k8s.aws/v1beta1
+kind: TargetGroupBinding
+metadata:
+  name: frontend
+  namespace: expense
+spec:
+  serviceRef:
+    name: frontend # route traffic to the awesome-service
+    port: 80
+  targetGroupARN: arn:aws:elasticloadbalancing:us-east-1:315069654700:targetgroup/expense-dev-frontend/709ac65514f95b53
